🚀 Deploying latest changes

--- a/pytest.ini
+++ b/pytest.ini
@@ -17,11 +17,21 @@ python_functions = test_*
 # Coverage settings
 addopts = --cov=app --cov-report=html:logs/coverage/html --cov-report=json:logs/coverage/coverage.json
 
+# Timeout settings
+timeout = 30
+
+# Async settings
 asyncio_mode = auto
+asyncio_default_fixture_loop_scope = function
+
+# Test markers
 markers =
     unit: Unit tests
     integration: Integration tests
     slow: Tests that take longer to run
+    timeout: Mark test with timeout in seconds
+
+# Warnings
 filterwarnings =
     ignore::DeprecationWarning
     ignore::UserWarning 
