--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
-fastapi>=0.68.0
-uvicorn>=0.15.0
-python-dotenv>=0.19.0
-httpx>=0.23.0
-pyyaml>=6.0.1
-python-json-logger>=2.0.7
-structlog>=23.1.0  # For structured logging
-python-multipart
-sentence-transformers
-faiss-cpu
-slowapi
-jinja2>=3.1.2  # For template rendering
+fastapi==0.115.12
+uvicorn==0.34.2
+python-dotenv==1.1.0
+sentence-transformers==4.1.0
+faiss-cpu==1.11.0
+numpy==2.2.5
+httpx==0.28.1
+python-multipart==0.0.20
+pyyaml==6.0.2
+python-json-logger==3.3.0
+jinja2==3.1.6
+slowapi==0.1.9
+pytest-timeout==2.4.0
