--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,12 +1,13 @@
 -r requirements.txt
-pytest>=7.0.0
-pytest-cov>=4.0.0
-pytest-asyncio>=0.21.0
+pytest==8.3.5
+pytest-cov==6.1.1
+pytest-asyncio==1.0.0
 pytest-mock>=3.10.0
 httpx>=0.24.0
-factory-boy>=3.2.1
-faker>=18.0.0
+factory-boy==3.3.3
+faker==37.3.0
 black>=23.0.0
 flake8>=6.0.0
 mypy>=1.0.0
-isort>=5.12.0 
+isort>=5.12.0
+coverage==7.8.2 
