--- a/config/nginx/app.conf
+++ b/config/nginx/app.conf
@@ -2,6 +2,37 @@ server {
     listen 80;
     server_name _;
 
+    # ACME challenge location for Let's Encrypt
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    # Redirect all HTTP traffic to HTTPS
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl;
+    server_name _;
+
+    # SSL configuration
+    ssl_certificate /etc/letsencrypt/live/207.180.227.18/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/207.180.227.18/privkey.pem;
+    
+    # Improve SSL configuration
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers off;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:50m;
+    ssl_session_tickets off;
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    # Add HSTS later once SSL is confirmed working
+    # add_header Strict-Transport-Security "max-age=63072000" always;
+
     location / {
         proxy_pass http://app:8000;
         proxy_set_header Host $host;
@@ -9,9 +40,4 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-
-    # Enable SSL configuration later
-    # listen 443 ssl;
-    # ssl_certificate /etc/letsencrypt/live/your-domain/fullchain.pem;
-    # ssl_certificate_key /etc/letsencrypt/live/your-domain/privkey.pem;
 } 
