Update nginx configuration for roam.boomerjihad.com domain

--- a/config/nginx/app.conf
+++ b/config/nginx/app.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name _;
+    server_name roam.boomerjihad.com;
 
     # ACME challenge location for Let's Encrypt
     location /.well-known/acme-challenge/ {
@@ -15,11 +15,11 @@ server {
 
 server {
     listen 443 ssl;
-    server_name _;
+    server_name roam.boomerjihad.com;
 
     # SSL configuration
-    ssl_certificate /etc/letsencrypt/live/207.180.227.18/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/207.180.227.18/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/roam.boomerjihad.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/roam.boomerjihad.com/privkey.pem;
     
     # Improve SSL configuration
     ssl_protocols TLSv1.2 TLSv1.3;
@@ -40,4 +40,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
     }
-} 
+}
+
+# We'll add HTTPS configuration once we have a proper domain name
+# For now, we'll keep HTTP only since we can't get a Let's Encrypt cert for an IP address 
