--- a/config/nginx/app.conf
+++ b/config/nginx/app.conf
@@ -7,9 +7,13 @@ server {
         root /var/www/certbot;
     }
 
-    # Redirect all HTTP traffic to HTTPS
+    # For now, proxy all traffic to the app
     location / {
-        return 301 https://$host$request_uri;
+        proxy_pass http://app:8000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
 
