Comment out HTTPS config until we have certificates

--- a/config/nginx/app.conf
+++ b/config/nginx/app.conf
@@ -17,34 +17,35 @@ server {
     }
 }
 
-server {
-    listen 443 ssl;
-    server_name roam.boomerjihad.com;
-
-    # SSL configuration
-    ssl_certificate /etc/letsencrypt/live/roam.boomerjihad.com/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/roam.boomerjihad.com/privkey.pem;
-    
-    # Improve SSL configuration
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers off;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-    ssl_session_timeout 1d;
-    ssl_session_cache shared:SSL:50m;
-    ssl_session_tickets off;
-    ssl_stapling on;
-    ssl_stapling_verify on;
-    # Add HSTS later once SSL is confirmed working
-    # add_header Strict-Transport-Security "max-age=63072000" always;
-
-    location / {
-        proxy_pass http://app:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
+# Commented out until we have SSL certificates
+# server {
+#     listen 443 ssl;
+#     server_name roam.boomerjihad.com;
+# 
+#     # SSL configuration
+#     ssl_certificate /etc/letsencrypt/live/roam.boomerjihad.com/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/roam.boomerjihad.com/privkey.pem;
+#     
+#     # Improve SSL configuration
+#     ssl_protocols TLSv1.2 TLSv1.3;
+#     ssl_prefer_server_ciphers off;
+#     ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+#     ssl_session_timeout 1d;
+#     ssl_session_cache shared:SSL:50m;
+#     ssl_session_tickets off;
+#     ssl_stapling on;
+#     ssl_stapling_verify on;
+#     # Add HSTS later once SSL is confirmed working
+#     # add_header Strict-Transport-Security "max-age=63072000" always;
+# 
+#     location / {
+#         proxy_pass http://app:8000;
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+# }
 
 # We'll add HTTPS configuration once we have a proper domain name
 # For now, we'll keep HTTP only since we can't get a Let's Encrypt cert for an IP address 
